5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4068/executions/1578_1326.log
== TEST (2019-03-25 19:20:31) 
-- CODE:
print(40+35)
print(=75)
-- ERROR:
File "XXXX", line 2
    print(=75)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:20:38) 
-- CODE:
print(40+35)
print(75)
-- OUTPUT:
75
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:20:44) 
-- CODE:
print(40+35)
print(75)
-- EXECUTION TIME:
0.135833
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:21:00) 
-- CODE:
print(40+35)
print75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print75
NameError: name 'print75' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:22:34) 
-- CODE:
print(40+35)
=75

-- ERROR:
File "XXXX", line 2
    =75
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:22:45) 
-- CODE:
print(40+35)
= 75

-- ERROR:
File "XXXX", line 2
    = 75
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:24:53) 
-- CODE:
s=40
j=35
total=s+j
print("total")
-- OUTPUT:
total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:25:05) 
-- CODE:
s=40
j=35
total=s+j
print(total)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:25:09) 
-- CODE:
s=40
j=35
total=s+j
print(total)
-- EXECUTION TIME:
0.173955
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
